# flatbuffers-tonic

./: .gitignore  Cargo.toml  README.md
.github/workflows/: CI.yml
docs/: Dev.md
fbs/: fbs.helloworld.fbs  helloworld.fbs  sample.fbs
flatbuffers-tonic/: Cargo.toml
flatbuffers-tonic-build/: Cargo.toml
flatbuffers-tonic-build/src/: flatbuffers_self.rs  flatbuffers_tonic.rs  lib.rs
flatbuffers-tonic-tests/: Cargo.toml  build.rs
flatbuffers-tonic-tests/src/: codec_tests.rs  fb_tests.rs  generated.rs  helloworld_gen.rs  lib.rs  reflect_test.rs  tonic_tests.rs
flatbuffers-tonic/src/: codec.rs  lib.rs  wrapper.rs
flatbuffers-util/: Cargo.toml
flatbuffers-util/fbs/: reflection.fbs
flatbuffers-util/src/: builder.rs  lib.rs  ownedfb.rs
flatbuffers-util/src/reflect/: code_gen.rs  invoke.rs  mod.rs
