[package]
name = "flatbuffers-util"
version = "0.1.1"
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true

readme = "../README.md"
description = "flatbuffers utilities."

[dependencies]
flatbuffers.workspace = true
flatbuffers-reflection = { workspace = true, optional = true }
bytes.workspace = true

[features]
default = []
# reflection for flatbuffers
reflect = ["dep:flatbuffers-reflection"]